Make sure scrollbar buttons are visible

--- a/templates/TrueDark/gtk-3.0/gtk-widgets.css
+++ b/templates/TrueDark/gtk-3.0/gtk-widgets.css
@@ -290,6 +290,9 @@ scrollbar slider {
 	box-shadow: inset 0 0 0 1px shade(@entryselbg-color, 2.0);
 }
 
+scrollbar.horizontal button { min-width: 8px; }
+scrollbar.vertical button { min-height: 8px; }
+
 scrollbar.vertical slider {
 	background: -gtk-gradient(linear, 0 0, 0.5 0, color-stop(0.0, alpha(shade(@entryselbg-color, 1.6), 0.5) ),
 	                color-stop(0.50,alpha(shade(@entryselbg-color,1.7), 0.5)),
